fix: zapper, try to fix zoom on ios

--- a/src/components/InputFileButton/InputFileButton.module.scss
+++ b/src/components/InputFileButton/InputFileButton.module.scss
@@ -1,5 +1,6 @@
 .label {
   cursor: pointer;
+  display: inline-block;
   white-space: nowrap;
   user-select: none;
   font-size: 14px;
