--- a/src/components/Screen/Screen.module.scss
+++ b/src/components/Screen/Screen.module.scss
@@ -46,6 +46,8 @@
 
 body:has(.fullscreen) {
   overflow: hidden;
+  user-select: none;
+  touch-action: none;
 }
 
 .cursorNone {
